# SmartTimetableScheduler

./: .gitmodules  CMakeLists.txt  README.md  project_structure.txt
frontend/: main.js  package.json
frontend/renderer/: index.html  timetable.html
frontend/renderer/css/: timetable.css
frontend/renderer/js/: github.js  preload.js
src/: CMakeLists.txt  main.cpp
src/user_interface/: ui_core.cpp  ui_core.hpp  ui_core.ui
